# web_search_schemes

./: CMakeLists.txt  README.md  convertToSvg.h  convertToTikz.h  cpm.dependencies  cpm.dependencies.license  error_fmt.h  main.cpp
docs/: index.html  js.js  search_schemes.js.js  search_schemes.js.wasm  style.css
